Add GitHub Pages deployment and pre-push guardrails
- Update docs workflow: deploy Sphinx HTML to GitHub Pages on main push
- Add .githooks/pre-push: prevent pushing branches to wrong remotes

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,7 +3,16 @@ name: docs
 on:
   pull_request:
   push:
-    branches: [main, dev]
+    branches: [main]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: true
 
 jobs:
   build-docs:
@@ -25,5 +34,20 @@ jobs:
       - name: Build HTML docs
         run: sphinx-build -W --keep-going -b html docs docs/_build/html
 
-      - name: Link check
-        run: sphinx-build -W --keep-going -b linkcheck docs docs/_build/linkcheck
+      - name: Upload artifact
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs/_build/html
+
+  deploy:
+    if: github.ref == 'refs/heads/main'
+    needs: build-docs
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
