--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install package
+        env:
+          MACOSX_DEPLOYMENT_TARGET: "11.0"
         run: |
           python -m pip install --upgrade pip
           python -m pip install -e ".[dev]"
