--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,16 +29,16 @@ jobs:
       - name: Install package and docs dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -e .[docs]
+          pip install -e ".[docs]"
 
       - name: Build HTML docs
-        run: sphinx-build -W --keep-going -b html docs docs/_build/html
+        run: mkdocs build --strict -d site
 
       - name: Upload artifact
         if: github.ref == 'refs/heads/main'
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/_build/html
+          path: site
 
   deploy:
     if: github.ref == 'refs/heads/main'
