--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,8 @@ dev = [
     "mypy",
 ]
 docs = [
-    "sphinx>=7.0",
-    "myst-parser>=2.0",
-    "furo>=2024.8.6",
+    "mkdocs-material>=9.0",
+    "mkdocstrings[python]>=0.24",
 ]
 
 [project.urls]
